# Task-Manager-API

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 36bac51bb9b5_initial_migration.py
src/: config.py  database.py  main.py
src/tasks/: crud.py  models.py  router.py  schemas.py  utils.py
tests/: conftest.py  test_tasks.py
