[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Harsh Mhta"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
alembic = "^1.14.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
